--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@
 
         <div id="infoRight" class="glass">
             <h2 id="infoTitle">More Info</h2>
-            <p id="infoP">Test test test test test.</p>
+            <p id="infoP">
+                <b>What is Scoopermania?</b>
+                <br>
+                An Annual all-you-can-eat Ice Cream Fundraiser that benefits the Jimmy Fund and Dana-Farber Cancer Institute!
+                <br><br>
+                <b>When is Scoopermania?</b>
+                <br>
+                Scoopermania will be held on Saturday, May 17, 2025 from 12:00 PM to 4:00 PM at the Cyrus Dallin Art Museum.
+            </p>
         </div>
 
     </body>
