--- a/tickets.html
+++ b/tickets.html
@@ -29,9 +29,9 @@
             <button id="iceCreamBtn" class="btn"><a href="tickets.html">Tickets</a></button>
         </div>
 
-        <div id="donate" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
-            <img src="assets/heart.png" alt="Donate" class="image" id="donateIcn">
-            <button id="donateBtn" class="btn"><a href="donate.html">Donate</a></button>
+        <div id="about" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
+            <img src="assets/heart.png" alt="about" class="image" id="donateIcn">
+            <button id="donateBtn" class="btn"><a href="about.html">about</a></button>
         </div>
 
     </div>
