--- a/index.html
+++ b/index.html
@@ -67,16 +67,12 @@
 </div>
 
 <div id="infoRight" class="glass">
+    <p id="exit" onclick="exitInfo()">X</p>
     <h2 id="infoTitle">More Info</h2>
-    <p id="infoP">
-        <b>What is Scoopermania?</b>
-        <br>
-        An Annual all-you-can-eat Ice Cream Fundraiser that benefits the Jimmy Fund and Dana-Farber Cancer Institute!
-        <br><br>
-        <b>When is Scoopermania?</b>
-        <br>
-        Scoopermania will be held on Saturday, May 17, 2025 from 12:00 PM to 4:00 PM at the Cyrus Dallin Art Museum.
-    </p>
+    <h3 class="larger">What even is Scoopermania?</h3>
+    <p class="info">Scoopermania is an annual all-you-can-eat ice cream fundraiser for the Jimmy Fund and Dana-Farber Cancer Institute!</p>
+    <h3 class="larger">When is it?</h3>
+    <p class="info">Scoopermania will be held on Saturday, May 17, 2025 from 12:00 PM to 4:00 PM at the <a id="map" href="https://maps.apple.com/directions?destination=42.415726%2C+-71.15239&mode=driving">Cyrus Dallin Art Museum.</a></p>
 </div>
 
 </body>
