--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div id="iceCream" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
             <img src="assets/ticket.png" alt="Ice Cream" class="image" id="iceCreamIcn">
-            <button id="iceCreamBtn" class="btn"><a href="tickets.html">Tickets</a></button>
+            <button id="iceCreamBtn" class="btn"><a href="https://buy.stripe.com/test_00g8zhfL03Ou6qI288">Tickets</a></button>
         </div>
 
         <div id="about" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
