--- a/tickets.html
+++ b/tickets.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
+    <script async src="https://js.stripe.com/v3/buy-button.js"></script>
     <title>Scoopermania Tickets</title>
     <link rel="icon" href="assets/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
@@ -37,7 +38,7 @@
     </div>
 
 </div>
-WIP
 </body>
 <script src=script.js></script>
+
 </html>
