--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div id="home" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
             <img src="assets/home.png" alt="Home" class="image" id="homeIcn">
-            <button id="homeBtn" class="btn"><a href="index.html">Home</a></button>
+            <button id="homeBtn" class="btn"><a href="/">Home</a></button>
         </div>
 
         <div id="iceCream" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
@@ -31,7 +31,7 @@
 
         <div id="about" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
             <img src="assets/heart.png" alt="about" class="image" id="donateIcn">
-            <button id="donateBtn" class="btn"><a href="about.html">about</a></button>
+            <button id="aboutBtn" class="btn"><a href="/about/">about</a></button>
         </div>
 
     </div>
@@ -72,7 +72,7 @@
     <h3 class="larger">What even is Scoopermania?</h3>
     <p class="info">Scoopermania is an annual all-you-can-eat ice cream fundraiser for the Jimmy Fund and Dana-Farber Cancer Institute!</p>
     <h3 class="larger">When is it?</h3>
-    <p class="info">Scoopermania will be held on Saturday, May 17, 2025 from 12:00 PM to 4:00 PM at the <a id="map" href="https://maps.apple.com/directions?destination=42.415726%2C+-71.15239&mode=driving">Cyrus Dallin Art Museum.</a></p>
+    <p class="info">Scoopermania will be held on Saturday, May 17, 2025, from 12:00 PM to 4:00 PM at the <a id="map" href="https://maps.apple.com/directions?destination=42.415726%2C+-71.15239&mode=driving">Cyrus Dallin Art Museum.</a></p>
 </div>
 
 </body>
