--- a/about/index.html
+++ b/about/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>Scoopermania Donations</title>
-    <link rel="icon" href="assets/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="../assets/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
@@ -20,26 +20,24 @@
     <div id="container">
 
         <div id="home" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
-            <img src="assets/home.png" alt="Home" class="image" id="homeIcn">
-            <button id="homeBtn" class="btn"><a href="index.html">Home</a></button>
+            <img src="../assets/home.png" alt="Home" class="image" id="homeIcn">
+            <button id="homeBtn" class="btn"><a href="/">Home</a></button>
         </div>
 
         <div id="iceCream" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
-            <img src="assets/ticket.png" alt="Ice Cream" class="image" id="iceCreamIcn">
-            <button id="iceCreamBtn" class="btn"><a href="tickets.html">Tickets</a></button>
+            <img src="../assets/ticket.png" alt="Ice Cream" class="image" id="iceCreamIcn">
+            <button id="iceCreamBtn" class="btn"><a href="https://buy.stripe.com/test_00g8zhfL03Ou6qI288">Tickets</a></button>
         </div>
 
         <div id="about" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
-            <img src="assets/heart.png" alt="about" class="image" id="donateIcn">
-            <button id="donateBtn" class="btn"><a href="about.html">about</a></button>
+            <img src="../assets/heart.png" alt="about" class="image" id="donateIcn">
+            <button id="aboutBtn" class="btn"><a href="/about/">about</a></button>
         </div>
 
     </div>
 
 </div>
-
-</div>
 WIP
 </body>
-<script src=script.js></script>
+<script src=../script.js></script>
 </html>
