More minor fixes

--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@
 
         <div id="about" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
             <img src="../assets/heart.png" alt="about" class="image" id="donateIcn">
-            <button id="aboutBtn" class="btn"><a href="/about/">about</a></button>
+            <button id="aboutBtn" class="btn"><a href="/about">about</a></button>
         </div>
 
     </div>
