--- a/tickets/index.html
+++ b/tickets/index.html
@@ -15,30 +15,9 @@
 <body>
 
 <div id="screen-dimmer" onclick="exitInfo()"></div>
+<div id="navbar-placeholder"></div>
 
-<div id="bar" onmouseenter="barHover()" onmouseleave="barOff()" class="glass">
-
-    <div id="container">
-
-        <div id="home" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
-            <img src="../assets/home.png" alt="Home" class="image" id="homeIcn">
-            <button id="homeBtn" class="btn"><a href="../index.html">Home</a></button>
-        </div>
-
-        <div id="iceCream" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
-            <img src="../assets/ticket.png" alt="Ice Cream" class="image" id="iceCreamIcn">
-            <button id="iceCreamBtn" class="btn"><a href="index.html">Tickets</a></button>
-        </div>
-
-        <div id="about" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
-            <img src="../assets/heart.png" alt="about" class="image" id="donateIcn">
-            <button id="donateBtn" class="btn"><a href="../about/index.html">about</a></button>
-        </div>
-
-    </div>
-
-</div>
 </body>
-<script src=../script.js></script>
+<script src= "../script.js" ></script>
 
 </html>
