--- a/index.html
+++ b/index.html
@@ -15,28 +15,7 @@
 
 <div id="screen-dimmer" onclick="exitInfo()"></div>
 
-<div id="bar" onmouseenter="barHover()" onmouseleave="barOff()" class="glass">
-
-    <div id="container">
-
-        <div id="home" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
-            <img src="assets/home.png" alt="Home" class="image" id="homeIcn">
-            <button id="homeBtn" class="btn"><a href="/">Home</a></button>
-        </div>
-
-        <div id="iceCream" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
-            <img src="assets/ticket.png" alt="Ice Cream" class="image" id="iceCreamIcn">
-            <button id="iceCreamBtn" class="btn"><a href="https://buy.stripe.com/test_00g8zhfL03Ou6qI288">Tickets</a></button>
-        </div>
-
-        <div id="about" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
-            <img src="assets/heart.png" alt="about" class="image" id="donateIcn">
-            <button id="aboutBtn" class="btn"><a href="/about">about</a></button>
-        </div>
-
-    </div>
-
-</div>
+<div id="navbar-placeholder"></div>
 
 <div id="center" class="glass">
     <div id="countdown-container">
