Fix some issues and add patron page

--- a/supporters/index.html
+++ b/supporters/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <title>Scoopermania Donations</title>
+    <title>Scoopermania Patrons</title>
     <link rel="icon" href="../assets/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,14 @@
 
 <div id="navbar-placeholder"></div>
 
-WIP
+<div id="patronCenter" class="glass">
+    <h1 id="patronTitle">Patrons</h1>
+    <div id="patronLists">
+        <p class="list">Matt Malupin<br>Caleb Lefebvre<br>Camden Clark<br>Patricia Fries </p>
+        <p class="list">Ms. Q<br>Hailey Stern<br>Amitai Zur<br>Jannine Williams </p>
+        <p class="list">Cairn Johnson<br>Lincoln Clark<br>Al Davidson<br>Judy Miller</p>
+    </div>
+</div>
 </body>
 <script src=../script.js></script>
 </html>
