--- a/navbar.html
+++ b/navbar.html
@@ -13,8 +13,8 @@
     </div>
 
     <div id="about" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
-      <img src="/assets/heart.png" alt="about" class="image" id="donateIcn">
-      <button id="aboutBtn" class="btn"><a href="/about">about</a></button>
+      <img src="/assets/heart.png" alt="supporters" class="image" id="donateIcn">
+      <button id="aboutBtn" class="btn"><a href="/supporters">Patrons</a></button>
     </div>
 
   </div>
