Quickly making the tickets page for final result

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <script async src="https://js.stripe.com/v3/buy-button.js"></script>
     <title>Scoopermania Tickets</title>
     <link rel="icon" href="../assets/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
@@ -17,7 +16,29 @@
 <div id="screen-dimmer" onclick="exitInfo()"></div>
 <div id="navbar-placeholder"></div>
 
+<label for="ticketType">Buy a Ticket!</label>
+<select name="ticketType" id="ticketType">
+    <option value="Premium">Premium</option>
+    <option value="Adult">Adult</option>
+    <option value="Child">Child</option>
+</select>
+
+<h1>What's the difference?</h1>
+<div>
+    <div>
+        <h1></h1>
+        <p></p>
+    </div>
+    <div>
+        <h1></h1>
+        <p></p>
+    </div>
+    <div>
+        <h1></h1>
+        <p></p>
+    </div>
+</div>
 </body>
-<script src= "../script.js" ></script>
+<script src="../script.js"></script>
 
 </html>
