--- a/navbar.html
+++ b/navbar.html
@@ -9,12 +9,12 @@
 
     <div id="iceCream" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
       <img src="/assets/ticket.png" alt="Ice Cream" class="image" id="iceCreamIcn">
-      <button id="iceCreamBtn" class="btn"><a target="_blank" href="/">Tickets</a></button>
+      <button id="iceCreamBtn" class="btn"><a target="_blank" href="/tickets">Tickets</a></button>
     </div>
 
     <div id="about" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
       <img src="/assets/heart.png" alt="supporters" class="image" id="donateIcn">
-      <button id="aboutBtn" class="btn"><a href="/supporters">Patrons</a></button>
+      <button id="aboutBtn" class="btn"><a href="/">Patrons</a></button>
     </div>
 
   </div>
