Fixed issue again

--- a/navbar.html
+++ b/navbar.html
@@ -14,7 +14,7 @@
 
     <div id="about" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
       <img src="/assets/heart.png" alt="supporters" class="image" id="donateIcn">
-      <button id="aboutBtn" class="btn"><a href="/Patrons">Patrons</a></button>
+      <button id="aboutBtn" class="btn"><a href="/supporters">Patrons</a></button>
     </div>
 
   </div>
