--- a/supporters/index.html
+++ b/supporters/index.html
@@ -23,6 +23,7 @@
         <p class="list">Matt Malupin<br>Caleb Lefebvre<br>Camden Clark<br>Patricia Fries </p>
         <p class="list">Ms. Q<br>Hailey Stern<br>Amitai Zur<br>Jannine Williams </p>
         <p class="list">Cairn Johnson<br>Lincoln Clark<br>Al Davidson<br>Judy Miller</p>
+        <p class="list">Linda Manganaro<br>Donald Rivkin</p>
     </div>
 </div>
 </body>
