Better mobile stuff

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <button class="mainBtn" id="scroll" onclick="mainBtnClick()">More Info</button>
 </div>
 
-<div id="infoRight" class="glass">
+<div class="infoRight glass">
     <p id="exit" onclick="exitInfo()">X</p>
     <h2 id="infoTitle">More Info</h2>
     <h3 class="larger">What even is Scoopermania?</h3>
