--- a/tickets/index.html
+++ b/tickets/index.html
@@ -36,20 +36,21 @@
     <button class="mainBtn no-glow" id="scroll" onclick="mainBtnClick()">What's the difference?</button>
 </div>
 
-<div id="infoRight" class="glass">
-    <h2>What's the difference?</h2>
-    <div>
+<div class="infoRight glass" id="ticketInfoRight">
+    <p id="exit" onclick="exitInfo()">X</p>
+    <h2 id="infoTitle">What's the difference?</h2>
+    <div >
         <div>
-            <h1>Premium</h1>
-            <p></p>
+            <h3 class="larger">Premium</h3>
+            <p class="info">For only $2 more dollars than the Adult ticket enjoy all-you-can-eat ice cream, get into the raffle, support the cause, and cement your name into the Patrons page of the Scoopermania website!</p>
         </div>
         <div>
-            <h1>Adult</h1>
-            <p></p>
+            <h3 class="larger">Adult</h3>
+            <p class="info">For those 13 and older, get all-you-can-eat ice cream for only $8 dollars at Scoopermania on May 17!</p>
         </div>
         <div>
-            <h1>Child</h1>
-            <p></p>
+            <h3 class="larger">Child</h3>
+            <p class="info">For those 12 and younger, get all-you-can-eat ice cream for only $5 dollars at Scoopermania on May 17!</p>
         </div>
     </div>
 </div>
