--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,7 @@
 
     <div id="iceCream" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
       <img src="/assets/ticket.png" alt="Ice Cream" class="image" id="iceCreamIcn">
-      <button id="iceCreamBtn" class="btn"><a target="_blank" href="/tickets">Tickets</a></button>
+      <button id="iceCreamBtn" class="btn"><a href="/tickets">Tickets</a></button>
     </div>
 
     <div id="about" class="overlap" onmouseenter="itemHover(this)" onmouseleave="itemLeave(this)">
